GH-1281 Added structured starter Insights provider