@@ -20,12 +20,12 @@ package com.axelixlabs.axelix.sbs.spring.core.gclog;
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jspecify.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.axelixlabs.axelix.common.api.gclog.GcLogStatusResponse;
-import com.axelixlabs.axelix.sbs.spring.core.log.Logger;
 
 /**
  * Default implementation of {@link GcLogService}.
@@ -36,10 +36,11 @@ import com.axelixlabs.axelix.sbs.spring.core.log.Logger;
 // TODO This service requests to be moved to the starter‑domain
 public class DefaultGcLogService implements GcLogService {
 
+    private static final Logger log = LoggerFactory.getLogger(DefaultGcLogService.class);
+
     private static final String DEFAULT_FILE_NAME = "gc.log";
 
     private final JcmdExecutor jcmdExecutor;
-    private final Logger logger;
 
     @Nullable
     private volatile String pid;
@@ -47,9 +48,8 @@ public class DefaultGcLogService implements GcLogService {
     @Nullable
     private volatile List<String> availableLevels;
 
-    public DefaultGcLogService(JcmdExecutor jcmdExecutor, Logger logger) {
+    public DefaultGcLogService(JcmdExecutor jcmdExecutor) {
         this.jcmdExecutor = jcmdExecutor;
-        this.logger = logger;
     }
 
     // TODO We need to enhance the GC Logging status monitoring https://github.com/axelixlabs/axelix/issues/573
@@ -109,7 +109,7 @@ public class DefaultGcLogService implements GcLogService {
                 throw new GcLogException(result.getOutput());
             }
 
-            logger.info("GC logging enabled: level={}, file={}", level, DEFAULT_FILE_NAME);
+            log.info("GC logging enabled: level={}, file={}", level, DEFAULT_FILE_NAME);
 
         } catch (Exception e) {
             throw new GcLogException("Failed to enable GC logging", e);
@@ -125,7 +125,7 @@ public class DefaultGcLogService implements GcLogService {
                 throw new GcLogException(result.getOutput());
             }
 
-            logger.info("GC logging disabled");
+            log.info("GC logging disabled");
 
         } catch (Exception e) {
             throw new GcLogException("Failed to disable GC logging", e);
@@ -183,7 +183,7 @@ public class DefaultGcLogService implements GcLogService {
                             .map(String::trim)
                             .map(String::toLowerCase)
                             .filter(level -> !level.equals("off"))
-                            .collect(Collectors.toList());
+                            .toList();
                 }
             }
 
